WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147024
[Content Extensions] CSS-display-none rules are not working properly
https://bugs.webkit.org/show_bug.cgi?id=147024
Summary
[Content Extensions] CSS-display-none rules are not working properly
Benjamin Poulain
Reported
2015-07-16 18:07:07 PDT
[Content Extensions] CSS-display-none rules are not working properly
Attachments
Patch
(20.02 KB, patch)
2015-07-16 18:11 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2015-07-16 18:11:06 PDT
Created
attachment 256943
[details]
Patch
WebKit Commit Bot
Comment 2
2015-07-16 18:13:52 PDT
Attachment 256943
[details]
did not pass style-queue: ERROR: Source/WebCore/contentextensions/ContentExtensionRule.h:60: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] ERROR: Source/WebCore/contentextensions/ContentExtensionRule.h:62: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] Total errors found: 2 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Radar WebKit Bug Importer
Comment 3
2015-07-16 18:19:41 PDT
<
rdar://problem/21867831
>
WebKit Commit Bot
Comment 4
2015-07-17 11:29:16 PDT
Comment on
attachment 256943
[details]
Patch Clearing flags on attachment: 256943 Committed
r186957
: <
http://trac.webkit.org/changeset/186957
>
WebKit Commit Bot
Comment 5
2015-07-17 11:29:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug