[Content Extensions] CSS-display-none rules are not working properly https://bugs.webkit.org/show_bug.cgi?id=147024

Patch by Benjamin Poulain <bpoulain@apple.com> on 2015-07-17
Reviewed by Sam Weinig.

Source/WebCore:

There were 2 bugs prevening rules with css-display-none and a url-filter from working
correctly.

First, ContentExtensions::serializeActions() was merging selectors regardless of their
trigger. All the CSS Selectors would be grouped together and applied regardless of which
rule apply.

That problem was fixed by grouping CSS rules by trigger. We want all the undistinguishable
CSS rules to be merged. The trigger makes 2 rules dinstinguishable as one rule can apply
on a page while the next rule does not. The simplest approach is to group by trigger.

The second problem had to do with rules added before the document is created.
When accumulating those rules, we were only keeping the last one. The reason was that
DocumentLoader::addPendingContentExtensionDisplayNoneSelector() would only keep a single
selector list by extension.

This is fixed by keeping a vector of all the rules that apply.

Tests: http/tests/contentextensions/css-display-none-with-different-case-sensitivity-are-not-merged.html
       http/tests/contentextensions/css-display-none-with-different-triggers-are-not-merged.html
       http/tests/contentextensions/two-distinguishable-css-display-none-rules-on-main-resource.html

* contentextensions/ContentExtensionCompiler.cpp:
(WebCore::ContentExtensions::serializeActions):
* contentextensions/ContentExtensionRule.h:
(WebCore::ContentExtensions::Trigger::isEmpty):
(WebCore::ContentExtensions::TriggerHash::hash):
(WebCore::ContentExtensions::TriggerHash::equal):
(WebCore::ContentExtensions::TriggerHashTraits::constructDeletedValue):
(WebCore::ContentExtensions::TriggerHashTraits::isDeletedValue):
(WebCore::ContentExtensions::TriggerHashTraits::emptyValue):
(WebCore::ContentExtensions::TriggerHashTraits::isEmptyValue):
* contentextensions/ContentExtensionsBackend.cpp:
(WebCore::ContentExtensions::ContentExtensionsBackend::processContentExtensionRulesForLoad): Deleted.
* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::commitData):
(WebCore::DocumentLoader::addPendingContentExtensionDisplayNoneSelector):
* loader/DocumentLoader.h:

LayoutTests:

* http/tests/contentextensions/css-display-none-with-different-case-sensitivity-are-not-merged-expected.txt: Added.
* http/tests/contentextensions/css-display-none-with-different-case-sensitivity-are-not-merged.html: Added.
* http/tests/contentextensions/css-display-none-with-different-case-sensitivity-are-not-merged.html.json: Added.
* http/tests/contentextensions/css-display-none-with-different-triggers-are-not-merged-expected.txt: Added.
* http/tests/contentextensions/css-display-none-with-different-triggers-are-not-merged.html: Added.
* http/tests/contentextensions/css-display-none-with-different-triggers-are-not-merged.html.json: Added.
* http/tests/contentextensions/two-distinguishable-css-display-none-rules-on-main-resource-expected.txt: Added.
* http/tests/contentextensions/two-distinguishable-css-display-none-rules-on-main-resource.html: Added.
* http/tests/contentextensions/two-distinguishable-css-display-none-rules-on-main-resource.html.json: Added.

Canonical link: https://commits.webkit.org/165094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186957 268f45cc-cd09-0410-ab3c-d52691b4dbfc